tests/fail/elaboration/unification/mismatch/fun-literal-body-expr.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/fun-literal-body-expr.fathom:3:19
  │
3 │ fun A => fun a => A : fun (A : Type) -> A -> A
  │                   ^ type mismatch, expected `Type`, found `A`
  │
  = expected `Type`
       found `A`

'''
